// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it works with elements 1`] = `
.c0 {
  font-size: 1rem;
  font-family: Montserrat,sans-serif;
  line-height: 2;
  font-weight: 400;
  color: #292B3E;
}

.c0 > p {
  margin-bottom: 0.5rem;
}

.c0 > p:last-child {
  margin-bottom: 0;
}

.c1 {
  padding: 0;
  padding-top: 0;
  padding-bottom: 0;
  padding-left: 0;
  padding-right: 0;
}

<div
  class="c0"
>
  <ul
    class="c1"
  >
    <li
      class="c1"
    >
      <p>
        hello
      </p>
    </li>
    <li
      class="c1"
    >
      <p>
        world
      </p>
    </li>
  </ul>
</div>
`;

exports[`it works with ordered 1`] = `
.c0 {
  font-size: 1rem;
  font-family: Montserrat,sans-serif;
  line-height: 2;
  font-weight: 400;
  color: #292B3E;
}

.c0 > p {
  margin-bottom: 0.5rem;
}

.c0 > p:last-child {
  margin-bottom: 0;
}

.c1 {
  padding: 0;
  padding-top: 0;
  padding-bottom: 0;
  padding-left: 0;
  padding-right: 0;
}

<div
  class="c0"
>
  <ol
    class="c1"
  >
    <li
      class="c1"
    >
      hello
    </li>
    <li
      class="c1"
    >
      world
    </li>
  </ol>
</div>
`;

exports[`it works with strings 1`] = `
.c0 {
  font-size: 1rem;
  font-family: Montserrat,sans-serif;
  line-height: 2;
  font-weight: 400;
  color: #292B3E;
}

.c0 > p {
  margin-bottom: 0.5rem;
}

.c0 > p:last-child {
  margin-bottom: 0;
}

.c1 {
  padding: 0;
  padding-top: 0;
  padding-bottom: 0;
  padding-left: 0;
  padding-right: 0;
}

<div
  class="c0"
>
  <ul
    class="c1"
  >
    <li
      class="c1"
    >
      hello
    </li>
    <li
      class="c1"
    >
      world
    </li>
  </ul>
</div>
`;

exports[`it works with unordered 1`] = `
.c0 {
  font-size: 1rem;
  font-family: Montserrat,sans-serif;
  line-height: 2;
  font-weight: 400;
  color: #292B3E;
}

.c0 > p {
  margin-bottom: 0.5rem;
}

.c0 > p:last-child {
  margin-bottom: 0;
}

.c1 {
  padding: 0;
  padding-top: 0;
  padding-bottom: 0;
  padding-left: 0;
  padding-right: 0;
}

<div
  class="c0"
>
  <ul
    class="c1"
  >
    <li
      class="c1"
    >
      hello
    </li>
    <li
      class="c1"
    >
      world
    </li>
  </ul>
</div>
`;
